cicd/pipeline/11-jenkins-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: 'true'
  name: jenkins
  labels:
    app: jenkins-persistent
    template: jenkins-persistent-template
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - jenkins
        from:
          kind: ImageStreamTag
          namespace: openshift
          name: 'jenkins:2'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    name: jenkins
  template:
    metadata:
      labels:
        name: jenkins
    spec:
      restartPolicy: Always
      serviceAccountName: jenkins
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources:
            limits:
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 240
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: jenkins
          livenessProbe:
            httpGet:
              path: /login
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 420
            timeoutSeconds: 240
            periodSeconds: 360
            successThreshold: 1
            failureThreshold: 2
          securityContext:
            capabilities: {}
            privileged: false
            procMount: Default
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/lib/jenkins
            - name: tatproxysecret-vol
              mountPath: /opt/tatproxy/secure
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/jenkins@sha256:e4ac7e0f7b1282b92cc6463a4aa98f77e82e973797cf394cef651bf8f67d2258
      serviceAccount: jenkins
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins
        - name: tatproxysecret-vol
          secret:
            secretName: tatproxyfilesecret
            defaultMode: 420
      dnsPolicy: ClusterFirst
