cicd/pipeline/03-jenkins-route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  name: jenkins
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins
